# python-project-lvl1

./: Makefile  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: linter-check.yml
BRAIN_GAMES/: cli.py
BRAIN_GAMES/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/: cli.py  engine.py  utils.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
